fixed whitespace at the bottom for mobile devices

--- a/style.css
+++ b/style.css
@@ -22,7 +22,21 @@
 
 /* Base */
 * { box-sizing: border-box; }
-html, body { height: 100%; font-family: var(--font); margin: 0; padding: 0;line-height: 1.5; display: flex; flex-direction: column; min-height: 100vh; overflow-x: hidden; }
+html, body { 
+  height: 100%; 
+  font-family: var(--font); 
+  margin: 0; 
+  padding: 0;
+  line-height: 1.5; 
+  display: flex; 
+  flex-direction: column; 
+  min-height: 100vh; 
+  overflow-x: hidden;
+  /* mobile view*/
+  padding-bottom: env(safe-area-inset-bottom, 0);
+  padding-bottom: constant(safe-area-inset-bottom, 0);
+
+}
 a { text-decoration: none; }
 img { display: block; max-width: 100%; height: auto; }
 .container { max-width: 1100px; margin: 0 auto; padding: 0 20px; }
@@ -596,5 +610,9 @@ footer {
   color: var(--accent);
   background: transparent;
   width: 100%;
+  /* mobile view*/
+  padding-bottom: env(safe-area-inset-bottom, 0);
+  padding-bottom: constant(safe-area-inset-bottom, 0);
+  
 }
 
